# hmm

./: .air.toml  .gitignore  Cargo.toml  go.mod  go.sum  main.go  storage.db
client/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx
client/src/components/: FileCard.tsx  PasswordInput.tsx
client/src/constant/: query.constant.ts  server.constant.ts
client/src/lib/: httpCommon.ts
client/src/pages/: Home.tsx  index.tsx
client/src/services/: auth.service.ts  file.service.ts
client/src/store/: fileSlice.ts  index.ts
client/src/types/: error.type.ts  file.type.ts  user.type.ts
cmd/http/: main.go
crates/hmm/: Cargo.toml
crates/hmm-utils/: Cargo.toml
crates/hmm-web/: Cargo.toml
handlers/: client.go  file.go
hmm-web/: Cargo.toml
internal/handlers/: auth.go  features.go  file.go  file_handler.go  user.go  user_handler.go
internal/middlewares/: error_middleware.go  validator.go
internal/services/: features.go  user.go  user_service.go
internals/database/: database.go
internals/middlewares/: error_handling.go
internals/utils/: error_util.go
pkg/: pkg.go
pkg/auth/: auth_handler.go
pkg/db/: connection.go
pkg/features/: feature_handler.go  feature_service.go
pkg/files/: file_handler.go
pkg/handlers/: client_handler.go
pkg/users/: user.go  user_handler.go  user_service.go
pkg/utils/: error_map.go  error_util.go
templates/: index.html  templates.go
templates/views/: index.html  layout.html  sign-in.html
ui/: package.json  pnpm-lock.yaml
web/: components.json  tailwind.config.js
(+24 files in other folders)
